# boomchecker-monorepo

./: .dockerignore  .gitignore  Doxyfile  README.md  Taskfile.yml  package.json  pnpm-workspace.yaml
.changeset/: petite-bobcats-stop.md
.claude/: settings.local.json
.devcontainer/: compose.devcontainer.yml
.devcontainer/api-backend-devcontainer/: devcontainer.json
.devcontainer/fw-devcontainer/: Dockerfile  devcontainer.json
.devcontainer/fw-esp-devcontainer/: devcontainer.json
.devcontainer/fw-esp-devcontainer-noesp/: Dockerfile  devcontainer.json
.devcontainer/sw-devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-api-be.yaml  docs-pages.yaml  test-api-be-build.yaml
.setup/: README.md  Taskfile.yml
apps/api-backend/: .env.example  .gitignore  CHANGELOG.md  README.md  boomchecker-api.service  go.mod  go.sum  main.go  package.json
apps/api-backend/docs/: docs.go  swagger.json  swagger.yaml
apps/api-backend/internal/crypto/: admin_jwt.go  encryption.go  jwt.go
apps/api-backend/internal/database/: database.go
apps/api-backend/internal/handlers/: admin_auth_handler.go  cleanup_handler.go  health.go  node_registration_handler.go  token_management_handler.go
apps/api-backend/internal/middleware/: admin_auth.go
apps/api-backend/internal/models/: admin_token.go  node.go  node_test.go  registration_token.go  registration_token_test.go  response.go
apps/api-backend/internal/repositories/: admin_token_repository.go  node_repository.go  node_repository_test.go  registration_token_repository.go  registration_token_repository_test.go
apps/api-backend/internal/services/: admin_auth_service.go  cleanup_service.go  email_service.go  node_registration_service.go  token_management_service.go
apps/api-backend/internal/templates/: templates.go
apps/api-backend/internal/templates/emails/: admin_token.html  admin_token.txt
apps/api-backend/internal/validators/: model_validators.go  timestamp.go  timestamp_test.go  validators.go  validators_test.go
apps/api-backend/scripts/: generate_keys.go
apps/device-web/: README.md  Taskfile.yml  package.json  server.js
apps/device-web/public/: app.js  index.html
docs/: conf.py  index.rst  peak_detector_algorithm.rst
docs/firmware/: conf.py  index.rst  overview.rst
docs/monorepo/: conf.py  index.rst
docs/node/: index.rst  overview.rst
docs/root/: conf.py  index.rst
docs/scripts/: conf.py  index.rst
docs/scripts/median-filter/: api.rst  index.rst
fw/: Taskfile.yml  package.json
fw/bom-node/: .gitignore  CHANGELOG.md  CMakeLists.txt  Taskfile.yml  package.json  partitions.csv  sdkconfig
fw/bom-node/components/audio_streamer/: CMakeLists.txt  audio_streamer.c
fw/bom-node/components/audio_streamer/include/: audio_streamer.h
fw/bom-node/components/impulse_detection/: CMakeLists.txt  detector.c  impulse_detection.c
fw/bom-node/components/impulse_detection/include/: detector.h  impulse_detection.h
fw/bom-node/components/impulse_detection/median-detector/: median_detection.c
fw/bom-node/components/mic_input/: CMakeLists.txt  mic_input.c  ring_buffer.c
fw/bom-node/components/mic_input/include/: mic_input.h  ring_buffer.h
fw/bom-node/components/middleware/: CMakeLists.txt  audio_capture.c  audio_config.c  audio_wav.c  middleware.c
fw/bom-node/components/middleware/include/: audio_capture.h  audio_config.h  audio_wav.h  middleware.h
fw/bom-node/components/middleware/wifi/: wifi_api.c  wifi_conf.c
fw/bom-node/components/middleware/wifi/include/: wifi.c  wifi.h  wifi_api.h  wifi_config.h  wifi_types.h
fw/bom-node/components/ota/: CMakeLists.txt  Kconfig  ota.c
fw/bom-node/components/ota/include/: ota.h
fw/bom-node/components/webserver/: CMakeLists.txt  endpoints.c  error_handler.c  handler.c  handler_options.c  spiffs_init.c  webserver.c
fw/bom-node/components/webserver/api/audio/: api_get_audio.c  api_post_audio.c
fw/bom-node/components/webserver/api/config/: api_get_config.c  api_get_config.yml
fw/bom-node/components/webserver/api/include/: api_get_audio.h  api_get_config.h  api_get_system.h  api_get_wifi.h  api_post_audio.h  api_post_system.h  api_post_wifi.h
fw/bom-node/components/webserver/api/module/get-schemas/: ModulePairStatus.yml
fw/bom-node/components/webserver/api/module/post-schemas/: ModulePair.yml
fw/bom-node/components/webserver/api/ota/get-schemas/: Ota.yml  OtaSearch.yml
fw/bom-node/components/webserver/api/ota/post-schemas/: OtaUpdate.yml
fw/bom-node/components/webserver/api/system/: api_get_system.c  api_post_system.c
fw/bom-node/components/webserver/api/wifi/: api_get_wifi.c  api_get_wifi.yml  api_post_wifi.c  api_post_wifi.yml
fw/bom-node/components/webserver/include/: endpoints.h  error_handler.h  handler.h  handler_get_static.h  handler_options.h  spiffs_init.h  webserver.h
fw/bom-node/components/webserver/slre/slre-master/: slre.c  slre.h  unit_test.c
fw/bom-node/components/webserver/static/: handler_get_static.c
fw/bom-node/main/: CMakeLists.txt  Kconfig.projbuild  boo-node_main.c  idf_component.yml
fw/bom-node/middleware/: CMakeLists.txt  Kconfig
fw/bom-node/middleware/wifi/: Kconfig  wifi_api.c
fw/bom-node/middleware/wifi/include/: wifi.c  wifi_config.h
hw/altium_libs/: bch-lib.SchLib
hw/altium_template/: normal-size.PcbDoc  sch_template.SchDoc
hw/node/v0.2/: .gitignore  bch-node_v0.2.PcbDoc  bch-node_v0.2.PrjPcb  mcu.SchDoc  top.SchDoc
scripts/: Taskfile.yml
scripts/median-filter/: CMakeLists.txt  Taskfile.yml  setup.sh
scripts/median-filter/csrc/: Taskfile.yml  peak_detector.c  peak_detector.h  peak_detector_runner.c
scripts/median-filter/csrc/tests/: peak_detector_runner_test.c  peak_detector_test.c
scripts/median-filter/python/: .env.example  benchmark.py  detect.py  load_audio.py  prompt_store.py  requirements.txt
